refs #55817 - fix z-index issue and breaking tests

--- a/app/assets/stylesheets/fae/modules/forms/_simple-mde.scss
+++ b/app/assets/stylesheets/fae/modules/forms/_simple-mde.scss
@@ -15,4 +15,8 @@
     border-color: $c-mid-grey;
     border-top-color: $c-grey;
   }
+
+  .CodeMirror-scroll {
+    z-index: 0;
+  }
 }
